@@ -1,3 +1,9 @@
+2005-06-27  Andrew Lunn <andrew.lunn@ascom.ch>
+
+	* src/common/serial.c (serial_select): Swap the DSR locks and
+	mutex locks around to avoid deadlocks with the rest of the code
+	which uses this order.
+	
 2005-06-17  Andreas Gaer <andreas.gaer@baslerweb.com>
 
 	* src/common/serial.c (serial_select): Lock DSRs inside
